--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "lodash.uniqueid": "^4.0.1",
+    "marked": "^1.2.0",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
