--- a/moz-todo/package.json
+++ b/moz-todo/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "lodash.uniqueid": "^4.0.1",
     "marked": "^1.2.0",
-    "vue": "^3.0.0-0"
+    "vue": "^3.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
